--- a/Venom/MainVenom.html
+++ b/Venom/MainVenom.html
@@ -40,9 +40,22 @@
             </span>
         </div>
         <div class="buttons">
-
+            <button class="button button-primary">
+                <img src="Style/Images/play.svg" alt="play" class="button-icon">
+                <span class="button-text">
+                    смотреть трейлер
+                </span>
+            </button>
+            <a href="Buy.html" class="button-link button">
+                <img src="Style/Images/ticket.svg" alt="/" class="button-icon" width="15px">
+                <span class="button-text">
+                    билеты на премьеру
+                </span>
+            </a>
         </div>
     </div>
     <!-- /.hero -->
+    <img src="Style/Images/Venom.png" alt="VenomPng" class="venom">
+    <!-- <img src="Style/Images/Blood.png" alt="BloodImg" class="blood"> -->
 </body>
 </html>
